<resources>
    <string name="app_name">GithubUser</string>
    <string name="searchbar_hint">Search users</string>
    <string name="user_name">Username</string>
    <string name="name">Name</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="zero">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_followers">Followers</string>
    <string name="string_following">Following</string>
    <string name="dark_mode">Dark mode</string>
    <string name="share">Share</string>
    <string name="creator">Zaidurrohman</string>
</resources>