<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_detail_user_photo_profile"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_user_photo_profile"
        app:layout_constraintTop_toTopOf="@+id/iv_detail_user_photo_profile"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tv_detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        tools:text="@string/user_name" />

    <TextView
        android:id="@+id/tv_detail_followers_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_user_photo_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
        tools:text="@string/zero" />

    <TextView
        android:id="@+id/tv_detail_following_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_follower"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
        tools:text="@string/zero" />

    <TextView
        android:id="@+id/tv_detail_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_followers_count"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_followers_count"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_followers_count"
        tools:text="@string/follower" />

    <TextView
        android:id="@+id/tv_detail_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_following_count"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_following_count"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_following_count"
        tools:text="@string/following" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_followers_count" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <ToggleButton
        android:id="@+id/toggle_fav"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/favorite_status"
        android:checked="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn=""
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_name"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_name"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_name" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/share"
        android:visibility="invisible"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>